[package]
name = "pledge"
version = "0.4.0"
authors = ["Andrew Aldridge <i80and@foxquill.com>"]
description = "Rust binding to OpenBSD's pledge(2) interface"
readme = "README.md"
repository = "https://github.com/i80and/pledge-rs"
documentation = "https://docs.rs/pledge/"
keywords = ["openbsd", "binding", "security"]
license = "MIT"

[workspace]
members = ["variants", "example-2015", "example-2018"]

[dependencies]
libc = "0.2"

[badges]
travis-ci = { repository = "i80and/pledge-rs" }
